<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_170sdp"
                android:src="@drawable/gsfk_logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:contentDescription="TODO"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_head"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/otp_head_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/opt_message"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@id/title"/>

            <LinearLayout
                android:id="@+id/otp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7sdp"
                android:orientation="horizontal"
                android:weightSum="6"
                android:layout_marginTop="@dimen/_20sdp"

                app:layout_constraintTop_toBottomOf="@id/otp_head_msg">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:textAlignment="center"
                    android:importantForAutofill="yes"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:importantForAutofill="yes"
                    android:textAlignment="center"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/otp_f"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/shaded_white_view_bg"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingVertical="@dimen/_11sdp"
                    android:importantForAutofill="yes"
                    android:textAlignment="center"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_18sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    android:visibility="invisible"
                    tools:ignore="MissingConstraints" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/timer_grp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="timer, sec" />

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="00:30"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"

                    app:layout_constraintBottom_toTopOf="@id/confirm_btn"
                    app:layout_constraintEnd_toStartOf="@id/sec" />

                <TextView
                    android:id="@+id/sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:text="sec"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toTopOf="@id/confirm_btn"
                    app:layout_constraintEnd_toEndOf="@id/confirm_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:alpha="0.55"
                    android:background="@drawable/button_gradient"
                    android:enabled="false"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/contin"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_blue"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/resend_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Didn't receive OTP? RESEND"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_btn" />

            <ProgressBar
                android:id="@+id/otp_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary_peach"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/confirm_btn"
                app:layout_constraintEnd_toEndOf="@id/confirm_btn"
                app:layout_constraintStart_toStartOf="@id/confirm_btn"
                app:layout_constraintTop_toTopOf="@id/confirm_btn" />

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    </ScrollView>

</layout>